# c2pa-audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_all_tests.sh
.github/workflows/: ci.yml  fuzz.yml  publish-c2pa_audio.yml
bindings/csharp/: C2paAudio.cs  CrispC2pa.cs
bindings/dart/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/example/: c2pa_audio_example.dart
bindings/dart/lib/: c2pa_audio.dart  crispasr_c2pa.dart
bindings/dart/test/: c2pa_audio_test.dart  crispasr_c2pa_test.dart
bindings/go/: c2pa_audio.go  c2pa_audio_test.go  crispasr_c2pa.go  crispasr_c2pa_test.go  go.mod
bindings/python/: c2pa_audio.py  crispasr_c2pa.py  test_c2pa_audio.py  test_crispasr_c2pa.py
demo/: README.md  build.mjs  index.html
docs/: M4A-BMFF.md
include/: c2pa_audio.h  crispasr_c2pa.h
js/: README.md  c2pa-verify.mjs  c2pa.mjs  c2pa.test.mjs  c2pa.unit.test.mjs  default-cert.mjs  package.json  reference-c2pa-rs.flac  reference-c2pa-rs.m4a  sample.m4a
src/: c2pa_native.cpp  c2pa_native.h  capi.cpp  default_cert.h  sha256.h
test/: c2pa_capi_test.c  fuzz_verify.cpp
test/assets/: sample.flac
tools/: parity_check.py
